--- a/Instagram-Clone/src/main/res/menu/user_list_fragment.xml
+++ b/Instagram-Clone/src/main/res/menu/user_list_fragment.xml
@@ -4,6 +4,9 @@
 
     <item
         android:id="@+id/menu_item_logout"
-        android:title="@string/logout"
-        app:showAsAction="ifRoom" />
+        android:title="@string/logout" />
+
+    <item
+        android:id="@+id/menu_item_share"
+        android:title="@string/share" />
 </menu>
